# Facekit

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: .pylintrc  cpu-ci.yml  cuda-ci.yml  pull_request.yml  release.yml
cython/nms/: cpu_nms.c  gpu_nms.cpp
demo/: face_depth.py  face_detection.py  face_gender.py  face_landmark.py  face_normalization.py  face_recognition.py  face_service.py  webcam.py
demo/face_depth/: tddfav2.py
demo/face_detection/: scrfd.py
docker/: Dockerfile  build.bash  dockerfile  pr.dockerfile
facekit/: __init__.py  enums.py  face_service.py  object.py  utils.py
facekit/components/: __init__.py  face_gender.py  face_normalization.py  utils.py
facekit/components/face_depth/: tddfav2.py
facekit/components/face_depth/Sim3DR/: rasterize.cpp
facekit/components/face_detection/: scrfd.py
facekit/components/face_landmark/: __init__.py  coordinate_reg.py
facekit/components/face_recognition/: arcface.py
facekit/face_depth/: __init__.py  tddfav2.py
facekit/face_detection/: draw.py  scrfd.py
pyface/: __init__.py  face_service.py  object.py
pyface/components/: face_gender.py
pyface/components/face_depth/: tddfav2.py
pyface/components/face_depth/Sim3DR/: rasterize.cpp
pyface/components/face_detection/: scrfd.py
tests/: test_face_depth.py  test_face_detection.py  test_jsonable.py  tools.py
tests/resources/answer/: EmmaWatson1_depth.npz  EmmaWatson1_detection.npz  EmmaWatson1_jsonable.json  JohnnyDepp1_depth.npz  JohnnyDepp1_detection.npz  JohnnyDepp1_jsonable.json
