[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "cython>=3.0.10",
  "numpy>=2"        # 建置時使用 NumPy 2 的 header
]
build-backend = "setuptools.build_meta"

[project]
name = "pyface-docsaid"
dynamic = ["version"]
description = "An Integrated Python Package for Face Analysis."
readme = "README.md"
license = { text = "Apache License 2.0" }
requires-python = ">=3.10,<3.13"
authors = [
  { name = "kunkunlin", email = "jacklin@cmlab.csie.ntu.edu.tw" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "numpy>=2",                 # 執行期也支援 NumPy 2
  "scikit-image",
  "capybara-docsaid",         # ← 與 setup.cfg 統一，使用連字號
  "huggingface_hub"
]

[project.urls]
Homepage = "https://github.com/DocsaidLab/PyFace"
Repository = "https://github.com/DocsaidLab/PyFace"
Issues = "https://github.com/DocsaidLab/PyFace/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyface*"]
exclude = ["demo", "tests", "docs", ".github", "docker"]

[tool.setuptools.dynamic]
version = { attr = "pyface.__version__" }
