[metadata]
name = facekit
version = attr: facekit.__version__
description = All models and API.
long_description = file: README.md
license = Apache License 2.0
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = >=3.10,<=3.12
url = https://github.com/AuthMe01/AIPackage.git
author = kunkunlin
author_email =
    jacklin@cmlab.csie.ntu.edu.tw

[options]
packages = find:
python_requires = >=3.10,<=3.12
include_package_data = True
setup_requires=
    wheel
    numpy
    cython
install_requires =
    scikit-image
    # jsonschema==4.17.3
    capybara_docsaid>=0.8.2
    gdown

[options.packages.find]
exclude =
    demo*
    tests*