[metadata]
name = pyface
version = attr: pyface.__version__
description = An Integrated Python Package for Face Analysis.
long_description = file: README.md
license = Apache License 2.0
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = >=3.10,<3.13
url = https://github.com/DocsaidLab/PyFace
author = kunkunlin
author_email =
    jacklin@cmlab.csie.ntu.edu.tw

[options]
packages = find:
include_package_data = True
setup_requires=
    wheel
    numpy
    cython
install_requires =
    scikit-image==0.25.2
    scipy==1.11.4
    # jsonschema==4.17.3
    capybara_docsaid>=0.8.2
    huggingface_hub

[options.packages.find]
exclude =
    demo
    tests
    docs
    docker
    .github